Add labels-changed output to track when labels are actually modified
- Add labels-changed=true when labels are added/removed
- Add labels-changed=false when correct label already exists
- Enables workflows to only notify on NEW large PRs, not existing ones
- Prevents duplicate notifications for PRs that already have size labels

--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,8 @@ outputs:
     description: "Whether custom sizes were used (true/false)"
   sizes-config:
     description: "The size configuration that was used (JSON string)"
+  labels-changed:
+    description: "Whether labels were actually added or removed (true/false)"
   sizeLabel:
     description: "Legacy output - same as size-label (deprecated, use size-label instead)"
 runs:
